--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   "homepage": "https://github.com/matthias-bs/BresserWeatherSensorTTN#README",
   "dependencies": {
     "BresserWeatherSensorReceiver": "matthias-bs/BresserWeatherSensorReceiver#semver:^0.0.3",
-    "mcci-catena/arduino-lmic": "^4.1.1",
+    "arduino-lmic": "mcci-catena/arduino-lmic#semver:^4.1.1",
     "mcci-catena/arduino-lorawan": "^0.9.2",
     "mcci-catena/Catena-mcciadk": "^0.2.2",
     "jgromes/RadioLib": "^5.3.0",
     "thesolarnomad/lora-serialization": "^3.1.0",
     "madhephaestus/ESP32AnalogRead": "^0.2.0",
     "PaulStoffregen/OneWire": "^2.3.7",
-    "milesburton/Arduino-Temperature-Control-Library": "^3.9.1",
+    "Arduino-Temperature-Control-Library": "milesburton/Arduino-Temperature-Control-Library#semver:^3.9.1",
     "matthias-bs/ESP32_ATC_MiThermometer_Library": "^0.0.1"
   }
 }
