--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/matthias-bs/BresserWeatherSensorTTN#README",
   "dependencies": {
     "BresserWeatherSensorReceiver": "matthias-bs/BresserWeatherSensorReceiver#semver:^0.0.3",
-    "arduino-lmic": "mcci-catena/arduino-lmic#semver:^4.1.1",
+    "arduino-lmic": "mcci-catena/arduino-lmic.git:v4.1.1",
     "arduino-lorawan": "mcci-catena/arduino-lorawan.git#v0.9.2",
     "Catena-mcciadk": "mcci-catena/Catena-mcciadk.git#v0.2.2",
     "RadioLib": "jgromes/RadioLib#semver:^5.3.0",
