--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,7 +71,7 @@ jobs:
           #arduino-cli lib install MQTT@2.5.0
           #arduino-cli lib install ArduinoJson@6.19.4
           declare -a required_libs=("BresserWeatherSensorReceiver@0.0.3"
-            "'MCCI LoRaWAN LMIC library'@4.1.1"
+            'MCCI LoRaWAN LMIC library@4.1.1'
             "'MCCI Arduino LoRaWAN Library'@0.9.2"
             "'MCCI Arduino Development Kit ADK'@0.2.2"
             "'LoRa Serialization'@3.1.0"
