--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,10 +71,10 @@ jobs:
           #arduino-cli lib install MQTT@2.5.0
           #arduino-cli lib install ArduinoJson@6.19.4
           declare -a required_libs=("BresserWeatherSensorReceiver@0.0.3"
-            "MCCI\ LoRaWAN\ LMIC\ library@4.1.1"
-            "'MCCI Arduino LoRaWAN Library'@0.9.2"
-            "'MCCI Arduino Development Kit ADK'@0.2.2"
-            "'LoRa Serialization'@3.1.0"
+            "MCCI LoRaWAN LMIC library@4.1.1"
+            "MCCI Arduino LoRaWAN Library@0.9.2"
+            "MCCI Arduino Development Kit ADK@0.2.2"
+            "LoRa Serialization@3.1.0"
             "ESP32Time@2.0.0"
             "Timezone@1.2.4"
             "ESP32AnalogRead@0.2.0"
@@ -83,7 +83,7 @@ jobs:
             "ESP32_ATC_MiThermometer_Library@0.1.0")
           for i in "${required_libs[@]}"
           do
-            arduino-cli lib install $i
+            arduino-cli lib install "$i"
           done
 
       - name: Install platform
