--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -80,7 +80,7 @@ jobs:
             "ESP32AnalogRead@0.2.0"
             "OneWire@2.3.7"
             "DallasTemperature@3.9.0"
-            "ESP32_ATC_MiThermometer_Library@0.1.0")
+            "ATC MiThermometer Library@0.1.0")
           for i in "${required_libs[@]}"
           do
             arduino-cli lib install "$i"
