--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -65,13 +65,8 @@ jobs:
         if: ${{ env.run-build == 'true' }}
         run:
           |
-          #ps -p "$$"
-          #arduino-cli lib install RadioLib@5.3.0
-          #arduino-cli lib install "LoRa Serialization"@3.1.0
-          #arduino-cli lib install MQTT@2.5.0
-          #arduino-cli lib install ArduinoJson@6.19.4
-          #declare -a required_libs=("BresserWeatherSensorReceiver@0.0.3"
-          declare -a required_libs=("https://github.com/matthias-bs/BresserWeatherSensorReceiver.git"
+          #declare -a required_libs=("https://github.com/matthias-bs/BresserWeatherSensorReceiver.git"
+          declare -a required_libs=("BresserWeatherSensorReceiver@0.0.3"
             "MCCI LoRaWAN LMIC library@4.1.1"
             "MCCI Arduino LoRaWAN Library@0.9.2"
             "MCCI Arduino Development Kit ADK@0.2.2"
