--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -93,6 +93,10 @@ jobs:
       - name: Checkout repository
         if: ${{ env.run-build == 'true' }}
         uses: actions/checkout@v2
+      
+      - name: Copy BresserWeatherCfg.h
+         cp /home/runner/work/BresserWeatherSensorTTN/BresserWeatherSensorTTN/examples/BresserWeatherSensorTTN/BresserWeatherCfg.h \
+            /home/runner/Arduino/libraries/BresserWeatherSensorReceiver/src/
 
       - name: Build examples
         if: ${{ env.run-build == 'true' }}
