--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -67,6 +67,7 @@ jobs:
           |
           #declare -a required_libs=("https://github.com/matthias-bs/BresserWeatherSensorReceiver.git"
           declare -a required_libs=("BresserWeatherSensorReceiver@0.0.3"
+            "RadioLib@5.3.0"
             "MCCI LoRaWAN LMIC library@4.1.1"
             "MCCI Arduino LoRaWAN Library@0.9.2"
             "MCCI Arduino Development Kit ADK@0.2.2"
@@ -81,7 +82,6 @@ jobs:
           do
             arduino-cli lib install "$i"
           done
-          ls -R
 
       - name: Install platform
         if: ${{ env.run-build == 'true' }}
