--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,8 +66,10 @@ jobs:
         run:
           |
           #declare -a required_libs=("https://github.com/matthias-bs/BresserWeatherSensorReceiver.git"
-          declare -a required_libs=("BresserWeatherSensorReceiver@0.3.0"
+          declare -a required_libs=(
+            "MQTT"
             "RadioLib@5.3.0"
+            "BresserWeatherSensorReceiver@0.3.0"
             "MCCI LoRaWAN LMIC library@4.1.1"
             "MCCI Arduino LoRaWAN Library@0.9.2"
             "MCCI Arduino Development Kit ADK@0.2.2"
@@ -77,8 +79,7 @@ jobs:
             "ESP32AnalogRead@0.2.0"
             "OneWire@2.3.7"
             "DallasTemperature@3.9.0"
-            "ATC MiThermometer Library@0.0.1"
-            "MQTT")
+            "ATC MiThermometer Library@0.0.1")
           for i in "${required_libs[@]}"
           do
             arduino-cli lib install "$i"
