--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -65,12 +65,11 @@ jobs:
         if: ${{ env.run-build == 'true' }}
         run:
           |
-          arduino-cli config init --enable_unsafe_install
-          arduino-cli lib install --git-url https://github.com/matthias-bs/BresserWeatherSensorReceiver.git
           #declare -a required_libs=("https://github.com/matthias-bs/BresserWeatherSensorReceiver.git"
           declare -a required_libs=(
             "MQTT"
             "RadioLib@5.3.0"
+            "BresserWeatherSensorReceiver@0.3.1"
             "MCCI LoRaWAN LMIC library@4.1.1"
             "MCCI Arduino LoRaWAN Library@0.9.2"
             "MCCI Arduino Development Kit ADK@0.2.2"
