--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         board:
-          - esp32:esp32:esp32@1.0.6
+          - esp32:esp32@1.0.6
 
     runs-on: ubuntu-latest
     name: ${{ matrix.board }}
