--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,9 @@ jobs:
     strategy:
       matrix:
         board:
+          # workaround for linker error with Arduino core for ESP32 v2.0.x (see https://github.com/matthias-bs/BresserWeatherSensorTTN/issues/6)
           - esp32:esp32@1.0.6
+          #- esp32:esp32:esp32
 
     runs-on: ubuntu-latest
     name: ${{ matrix.board }}
@@ -115,6 +117,7 @@ jobs:
             else
               # build sketch
               echo -e "\n\033[1;33mBuilding ${example##*/} ... \033[0m";
+              # hardcoded fqbn, because 'esp32:esp32@1.0.6' did not work
               #arduino-cli compile --libraries /home/runner/work/BresserWeatherSensorReceiver --fqbn ${{ matrix.board }}${{ steps.prep.outputs.options }} $example --warnings=${{ steps.prep.outputs.warnings }}
               arduino-cli compile --libraries /home/runner/work/BresserWeatherSensorReceiver --fqbn esp32:esp32:esp32${{ steps.prep.outputs.options }} $example --warnings=${{ steps.prep.outputs.warnings }}
               if [ $? -ne 0 ]; then
