--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "BresserWeatherSensorTTN",
   "version": "0.2.1",
   "description": "Bresser 5-in-1/6-in-1 868 MHz Weather Sensor Radio Receiver; provides data via LoRaWAN to The Things Network",
-  "main": "BresserWeatherSensorTTN.ino",
+  "main": "examples/BresserWeatherSensorTTN/BresserWeatherSensorTTN.ino",
   "frameworks": "arduino",
   "platforms": "ESP32",
   "directories": {
-    "src": "src"
+    "src": "src",
+    "examples": "examples"
   },
   "repository": {
     "type": "git",
