--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "BresserWeatherSensorTTN",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Bresser 5-in-1/6-in-1 868 MHz Weather Sensor Radio Receiver; provides data via LoRaWAN to The Things Network",
-  "main": "examples/BresserWeatherSensorTTN/BresserWeatherSensorTTN.ino",
+  "main": "BresserWeatherSensorTTN.ino",
   "frameworks": "arduino",
   "platforms": "ESP32",
   "directories": {
-    "src": "src",
-    "examples": "examples"
+    "src": "src"
   },
   "repository": {
     "type": "git",
