--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
         board:
           # workaround for linker error with Arduino core for ESP32 v2.0.x (see https://github.com/matthias-bs/BresserWeatherSensorTTN/issues/6)
           - esp32:esp32@1.0.6
-          #- esp32:esp32:esp32
+          - esp32:esp32:esp32
 
     runs-on: ubuntu-latest
     name: ${{ matrix.board }}
@@ -88,6 +88,7 @@ jobs:
             arduino-cli lib install "$i"
           done
           # OneWire is installed due to dependency in DallasTemperature, but OneWireNg shall be used instead
+          echo "Removing Arduino/libraries/OneWire (installed automatically, but shall be replaced by OneWireNg)"
           rm -r /home/runner/Arduino/libraries/OneWire
 
       - name: Install platform
@@ -113,6 +114,8 @@ jobs:
         run:
           |
           echo "#define LMIC_ENABLE_DeviceTimeReq 1" >> /home/runner/Arduino/libraries/MCCI_LoRaWAN_LMIC_library/project_config/lmic_project_config.h
+          # Fix for linker error with Arduino core for ESP32 v2.0.x as suggested in https://github.com/mcci-catena/arduino-lmic/issues/714#issuecomment-822051171
+          echo "#define hal_init LMICHAL_init" >> #define hal_init LMICHAL_init
       
       - name: Build sketch
         if: ${{ env.run-build == 'true' }}
