--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -59,7 +59,7 @@ jobs:
             # ESP8266
             echo "::set-output name=options:::xtal=80,ResetMethod=ck,CrystalFreq=26,FlashFreq=40,FlashMode=qio,eesz=512K"
             echo "::set-output name=index-url::--additional-urls http://arduino.esp8266.com/stable/package_esp8266com_index.json"
-            echo "::set-output name=skip-pattern::(HTTP|MQTT).*ino"
+            #echo "::set-output name=skip-pattern::(HTTP|MQTT).*ino"
 
           fi
 
@@ -71,7 +71,7 @@ jobs:
           declare -a required_libs=(
             "MQTT"
             "RadioLib@5.4.1"
-            "BresserWeatherSensorReceiver@0.3.2"
+            "BresserWeatherSensorReceiver@0.3.3"
             "MCCI LoRaWAN LMIC library@4.1.1"
             "MCCI Arduino LoRaWAN Library@0.9.2"
             "MCCI Arduino Development Kit ADK@0.2.2"
