--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,22 +45,18 @@ jobs:
         run:
           |
           # common settings - no extra options, skip nothing, all warnings
-          echo "::set-output name=options::"
-          echo "::set-output name=skip-pattern::''"
-          echo "::set-output name=warnings::'all'"
+          #echo "::set-output name=options::"
+          #echo "::set-output name=skip-pattern::''"
+          echo "skip-pattern=''" >> $GITHUB_OUTPUT
+          #echo "::set-output name=warnings::'all'"
+          echo "warnings='all'" >> $GITHUB_OUTPUT
 
           # platform-dependent settings - extra board options, board index URLs, skip patterns etc.
           if [[ "${{ contains(matrix.board, 'esp32:esp32') }}" == "true" ]]; then
             # ESP32
             python -m pip install pyserial
-            echo "::set-output name=index-url::--additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json"
-
-          elif [[ "${{ contains(matrix.board, 'esp8266:esp8266') }}" == "true" ]]; then
-            # ESP8266
-            echo "::set-output name=options:::xtal=80,ResetMethod=ck,CrystalFreq=26,FlashFreq=40,FlashMode=qio,eesz=512K"
-            echo "::set-output name=index-url::--additional-urls http://arduino.esp8266.com/stable/package_esp8266com_index.json"
-            #echo "::set-output name=skip-pattern::(HTTP|MQTT).*ino"
-
+            #echo "::set-output name=index-url::--additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json"
+            echo "index-url='--additional-urls https://raw.githubusercontent.com/espressif/arduino-esp32/gh-pages/package_esp32_index.json'" >> $GITHUB_OUTPUT
           fi
 
       - name: Install libraries
