--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -61,9 +61,9 @@ jobs:
           |
           #declare -a required_libs=("https://github.com/matthias-bs/BresserWeatherSensorReceiver.git"
           declare -a required_libs=(
-            "MQTT"
+            "MQTT@2.5.0"
             "RadioLib@5.4.1"
-            "BresserWeatherSensorReceiver@0.3.3"
+            "BresserWeatherSensorReceiver@0.4.0"
             "MCCI LoRaWAN LMIC library@4.1.1"
             "MCCI Arduino LoRaWAN Library@0.9.2"
             "MCCI Arduino Development Kit ADK@0.2.2"
