--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -97,8 +97,8 @@ jobs:
         if: ${{ env.run-build == 'true' }}
         run:
           |
-          cp /home/runner/work/BresserWeatherSensorTTN/BresserWeatherSensorTTN/WeatherSensorCfg.h \
-             /home/runner/Arduino/libraries/BresserWeatherSensorReceiver/src/
+          cp /home/runner/work/BresserWeatherSensorTTN/BresserWeatherSensorTTN/WeatherSensorCfg.h.template \
+             /home/runner/Arduino/libraries/BresserWeatherSensorReceiver/src/WeatherSensorCfg.h
 
       - name: Customizing lmic_project_config.h (LMIC_ENABLE_DeviceTimeReq)
         if: ${{ env.run-build == 'true' }}
