--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "ESP32AnalogRead": "madhephaestus/ESP32AnalogRead#semver:^0.2.1",
     "OneWireNg": "https://github.com/pstolarz/OneWireNg#semver:^0.12.0",
     "Arduino-Temperature-Control-Library": "milesburton/Arduino-Temperature-Control-Library#semver:^3.9.1",
-    "ESP32_ATC_MiThermometer_Library": "matthias-bs/ESP32_ATC_MiThermometer_Library#semver:^0.0.1"
+    "ATC_MiThermometer": "matthias-bs/ATC_MiThermometer#semver:^0.0.2"
   }
 }
