--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -72,6 +72,7 @@ jobs:
             "ESP32AnalogRead@0.2.1"
             "OneWireNg@0.12.0"
             "DallasTemperature@3.9.0"
+            "NimBLE-Arduino@1.4.1"
             "ATC_MiThermometer@0.0.2")
           #"OneWire@2.3.7"
           for i in "${required_libs[@]}"
