Update and rename main.yml to cppcheck.yml

--- a/.github/workflows/cppcheck.yml
+++ b/.github/workflows/cppcheck.yml
@@ -14,7 +14,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN}}
           enable: all
           #suppressions-list: suppressions.txt
-          language: c++ 
+          force_language: c++ 
           other_options: -I./src 
           #--error-exitcode=2 ./src/*
           
