--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,8 @@ jobs:
         board:
           - esp32:esp32@1.0.6
           - esp32:esp32:esp32
+          - esp32:esp32:firebeetle32
+          - esp32:esp32:ttgo-lora32:Revision=TTGO_LoRa32_V1
 
     runs-on: ubuntu-latest
     name: ${{ matrix.board }}
