--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,7 +18,10 @@ jobs:
           - esp32:esp32:esp32:DebugLevel=verbose
           - esp32:esp32:firebeetle32
           - esp32:esp32:ttgo-lora32:Revision=TTGO_LoRa32_V1
-          
+          - esp32:esp32:ttgo-lora32:Revision=TTGO_LoRa32_V2
+          - esp32:esp32:ttgo-lora32:Revision=TTGO_LoRa32_v21new
+          - esp32:esp32:featheresp32
+          - esp32:esp32:adafruit_feather_esp32s2
 
     runs-on: ubuntu-latest
     name: ${{ matrix.board }}
