--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,7 +76,7 @@ jobs:
             "ESP32Time@2.0.0"
             "ESP32AnalogRead@0.2.1"
             "OneWireNg@0.13.0"
-            "DallasTemperature@3.9.0")
+            "DallasTemperature@3.9.0"
             "NimBLE-Arduino@1.4.1"
             "ATC_MiThermometer@0.1.0")
           #"OneWire@2.3.7"
