--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -78,7 +78,8 @@ jobs:
             "OneWireNg@0.13.0"
             "DallasTemperature@3.9.0"
             "NimBLE-Arduino@1.4.1"
-            "ATC_MiThermometer@0.1.0")
+            "ATC_MiThermometer@0.1.0"
+            "TheengsDecoder@1.1.0")
           #"OneWire@2.3.7"
           for i in "${required_libs[@]}"
           do
