--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -85,6 +85,8 @@ jobs:
           do
             arduino-cli lib install "$i"
           done
+          gh repo clone pportelaf/DistanceSensor_A02YYUW
+          cp -r DistanceSensor_A02YYUW /home/runner/Arduino/libraries/
           # OneWire is installed due to dependency in DallasTemperature, but OneWireNg shall be used instead
           echo "Removing Arduino/libraries/OneWire (installed automatically, but shall be replaced by OneWireNg)"
           rm -r /home/runner/Arduino/libraries/OneWire
