--- a/WeatherSensorCfg.h.template
+++ b/WeatherSensorCfg.h.template
@@ -38,6 +38,11 @@
 // 20230207 Added pin definitions for ARDUINO_TTGO_LoRa32_v21new
 // 20230208 Added pin definitions for ARDUINO_TTGO_LoRa32_V2
 // 20230301 Added pin definitions for Wireless_Stick (from Heltec)
+// 20230316 Added pin definitions for Adafruit Feather ESP32 with RFM95W "FeatherWing" ADA3232
+// 20230330 Added pin definitions and changes for Adafruit Feather 32u4 (AVR) RFM95 LoRa Radio 
+// 20230412 Added workaround for Professional Wind Gauge / Anemometer, P/N 7002531
+// 20230420 Added pin definitions for DFRobot FireBeetle ESP32 with FireBeetle Cover LoRa
+// 20230607 Added pin definitions for Heltec WiFi LoRa 32(V2)
 //
 // ToDo:
 // -
@@ -77,11 +82,21 @@
 // in the Arduino IDE:
 //#define ARDUINO_heltec_wireless_stick
 
+// This define is set by selecting "Board: Heltec WiFi LoRa 32(V2)"
+// in the Adruino IDE:
+//#define ARDUINO_heltec_wifi_lora_32_V2
+
 // Adafruit Feather ESP32S2 with RFM95W "FeatherWing" ADA3232
 // https://github.com/espressif/arduino-esp32/blob/master/variants/adafruit_feather_esp32s2/pins_arduino.h
 //
 // This define is set by selecting "Adafruit Feather ESP32-S2" in the Arduino IDE:
 //#define ARDUINO_ADAFRUIT_FEATHER_ESP32S2
+
+// Adafruit Feather ESP32 with RFM95W "FeatherWing" ADA3232
+// https://github.com/espressif/arduino-esp32/blob/master/variants/feather_esp32/pins_arduino.h
+//
+// This define is set by selecting "Adafruit ESP32 Feather" in the Arduino IDE:
+//#define ARDUINO_FEATHER_ESP32
 
 // DFRobot Firebeetle32
 // https://github.com/espressif/arduino-esp32/tree/master/variants/firebeetle32/pins_arduino.h
@@ -106,15 +121,40 @@
     #pragma message("ARDUINO_heltec_wireless_stick defined; using on-board transceiver")
     #define USE_SX1276
 
+#elif defined(ARDUINO_heltec_wifi_lora_32_V2)
+    #pragma message("ARDUINO_heltec_wifi_lora_32_V2 defined; using on-board transceiver")
+    #define USE_SX1276
+
 #elif defined(ARDUINO_ADAFRUIT_FEATHER_ESP32S2)
     #pragma message("ARDUINO_ADAFRUIT_FEATHER_ESP32S2 defined; assuming RFM95W FeatherWing will be used")
     #define USE_SX1276
 
-#elif defined(ARDUINO_ESP32_DEV)
-    #pragma message("Generic ESP32; assuming this is the LoRaWAN_Node board (DFRobot Firebeetle32 + Adafruit RFM95W LoRa Radio)")
-    #define LORAWAN_NODE
+#elif defined(ARDUINO_FEATHER_ESP32)
+    #pragma message("ARDUINO_FEATHER_ESP32 defined; assuming RFM95W FeatherWing will be used")
     #define USE_SX1276
+    #pragma message("Required wiring: A to RST, B to DIO1, D to DIO0, E to CS")
 
+#elif defined(ARDUINO_AVR_FEATHER32U4)
+    #pragma message("ARDUINO_AVR_FEATHER32U4 defined; assuming this is the Adafruit Feather 32u4 RFM95 LoRa Radio")
+    #define USE_SX1276
+    
+#elif defined(ARDUINO_ESP32_DEV)
+    //#define LORAWAN_NODE
+    #define FIREBEETLE_ESP32_COVER_LORA
+    
+    #if !defined(LORAWAN_NODE) && !defined(FIREBEETLE_ESP32_COVER_LORA)
+        #pragma message("ARDUINO_ESP32_DEV defined; select either LORAWAN_NODE or FIREBEETLE_ESP32_COVER_LORA manually!")
+        
+    #elif defined(LORAWAN_NODE) 
+        #pragma message("LORAWAN_NODE defined; assuming this is the LoRaWAN_Node board (DFRobot Firebeetle32 + Adafruit RFM95W LoRa Radio)")
+        #define USE_SX1276
+
+    #elif defined(FIREBEETLE_ESP32_COVER_LORA)
+        #define USE_SX1276
+        #pragma message("FIREBEETLE_ESP32_COVER_LORA defined; assuming this is a FireBeetle ESP32 with FireBeetle Cover LoRa")
+        #pragma message("Required wiring: D2 to RESET, D3 to DIO0, D4 to CS, D5 to DIO1")
+    
+    #endif
 #endif
 
 
@@ -141,6 +181,10 @@
 #define SENSOR_IDS_INC {}
 //#define SENSOR_IDS_INC { 0x83750871 }
 
+// List of sensor IDs of the model "BRESSER 3-in-1 Professional Wind Gauge / Anemometer"
+// P/N 7002531 - requiring special heandling in decodeBresser5In1Payload()
+//#define SENSOR_IDS_DECODE3IN1 {}
+#define SENSOR_IDS_DECODE3IN1 { 0x2C100512 }
 
 // ------------------------------------------------------------------------------------------------
 // --- Debug Logging Output ---
@@ -196,6 +240,49 @@
 
 #endif
 
+
+//   Replacement for
+//   https://github.com/espressif/arduino-esp32/blob/master/cores/esp32/esp32-hal-log.h
+//   on Arduino AVR:
+#if defined(ARDUINO_ARCH_AVR)
+    #define ARDUHAL_LOG_LEVEL_NONE      0
+    #define ARDUHAL_LOG_LEVEL_ERROR     1
+    #define ARDUHAL_LOG_LEVEL_WARN      2
+    #define ARDUHAL_LOG_LEVEL_INFO      3
+    #define ARDUHAL_LOG_LEVEL_DEBUG     4
+    #define ARDUHAL_LOG_LEVEL_VERBOSE   5
+
+    // Set desired level here!
+    #define CORE_DEBUG_LEVEL ARDUHAL_LOG_LEVEL_INFO
+
+    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_NONE
+        #define log_e(...) { printf(__VA_ARGS__); println(); }
+     #else
+        #define log_e(...) {}
+     #endif
+    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_ERROR
+        #define log_w(...) { printf(__VA_ARGS__); println(); }
+     #else
+        #define log_w(...) {}
+     #endif
+    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_WARN
+        #define log_i(...) { printf(__VA_ARGS__); println(); }
+     #else
+        #define log_i(...) {}
+     #endif
+    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_INFO
+        #define log_d(...) { printf(__VA_ARGS__); println(); }
+     #else
+        #define log_d(...) {}
+     #endif
+    #if defined(DEBUG_ESP_PORT) && CORE_DEBUG_LEVEL > ARDUHAL_LOG_LEVEL_DEBUG
+        #define log_v(...) { printf(__VA_ARGS__); println(); }
+     #else
+        #define log_v(...) {}
+     #endif
+#endif
+
+
 //#define _DEBUG_MODE_          // Enable debug output (serial console)
 #define DEBUG_PORT Serial
 #if defined(_DEBUG_MODE_)
@@ -250,6 +337,18 @@
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  12
 
+#elif defined(FIREBEETLE_ESP32_COVER_LORA)
+    #define PIN_RECEIVER_CS   27 // D4
+
+    // CC1101: GDO0 / RFM95W/SX127x: G0
+    #define PIN_RECEIVER_IRQ  26 // D3
+
+    // CC1101: GDO2 / RFM95W/SX127x: G1
+    #define PIN_RECEIVER_GPIO 9  // D5
+
+    // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
+    #define PIN_RECEIVER_RST  25 // D2
+
 #elif defined(ARDUINO_TTGO_LoRa32_V1) || defined(ARDUINO_TTGO_LoRa32_V2)
     // Use pinning for LILIGO TTGO LoRa32-OLED
     #define PIN_RECEIVER_CS   LORA_CS
@@ -278,8 +377,8 @@
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  LORA_RST
 
-#elif defined(ARDUINO_heltec_wireless_stick)
-    // Use pinning for Heltec Wireless Stick
+#elif defined(ARDUINO_heltec_wireless_stick) || defined(ARDUINO_heltec_wifi_lora_32_V2)
+    // Use pinning for Heltec Wireless Stick or WiFi LoRa32 V2, respectively
     #define PIN_RECEIVER_CS   SS
 
     // CC1101: GDO0 / RFM95W/SX127x: G0
@@ -304,6 +403,19 @@
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  9
 
+#elif defined(ARDUINO_FEATHER_ESP32)
+    // Use pinning for Adafruit Feather ESP32 with RFM95W "FeatherWing" ADA3232
+    #define PIN_RECEIVER_CS   14
+
+    // CC1101: GDO0 / RFM95W/SX127x: G0
+    #define PIN_RECEIVER_IRQ  32
+
+    // CC1101: GDO2 / RFM95W/SX127x: G1
+    #define PIN_RECEIVER_GPIO 33
+
+    // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
+    #define PIN_RECEIVER_RST  27
+
 #elif defined(ESP32)
     // Generic pinning for ESP32 development boards
     #define PIN_RECEIVER_CS   27
@@ -316,7 +428,7 @@
 
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  32
-
+    
 #elif defined(ESP8266)
     // Generic pinning for ESP8266 development boards (e.g. LOLIN/WEMOS D1 mini)
     #define PIN_RECEIVER_CS   15
@@ -324,11 +436,25 @@
     // CC1101: GDO0 / RFM95W/SX127x: G0
     #define PIN_RECEIVER_IRQ  4
 
-    // CC1101: GDO2 / RFM95W/SX127x:
+    // CC1101: GDO2 / RFM95W/SX127x: G1
     #define PIN_RECEIVER_GPIO 5
 
     // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
     #define PIN_RECEIVER_RST  2
+    
+#elif defined(ARDUINO_AVR_FEATHER32U4)
+    // Pinning for Adafruit Feather 32u4 
+    #define PIN_RECEIVER_CS   8
+
+    // CC1101: GDO0 / RFM95W/SX127x: G0
+    #define PIN_RECEIVER_IRQ  7
+
+    // CC1101: GDO2 / RFM95W/SX127x: G1 (not used)
+    #define PIN_RECEIVER_GPIO 99
+
+    // RFM95W/SX127x - GPIOxx / CC1101 - RADIOLIB_NC
+    #define PIN_RECEIVER_RST  4
+
 #endif
 
 #define STR_HELPER(x) #x
