--- a/WeatherSensorCfg.h.template
+++ b/WeatherSensorCfg.h.template
@@ -43,6 +43,7 @@
 // 20230412 Added workaround for Professional Wind Gauge / Anemometer, P/N 7002531
 // 20230420 Added pin definitions for DFRobot FireBeetle ESP32 with FireBeetle Cover LoRa
 // 20230607 Added pin definitions for Heltec WiFi LoRa 32(V2)
+// 20230624 Added Bresser Lightning Sensor decoder
 //
 // ToDo:
 // -
@@ -301,6 +302,7 @@
 #define BRESSER_5_IN_1
 #define BRESSER_6_IN_1
 #define BRESSER_7_IN_1
+#define BRESSER_LIGHTNING
 
 #if ( !defined(BRESSER_5_IN_1) && !defined(BRESSER_6_IN_1) && !defined(BRESSER_7_IN_1) )
     #error "Either BRESSER_5_IN_1 and/or BRESSER_6_IN_1 and/or BRESSER_7_IN_1 must be defined!"
