Target heltec_wireless_stick: removed parameter 'PSRAM'

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
           #- esp32:esp32:ttgo-lora32:Revision=TTGO_LoRa32_V1
           #- esp32:esp32:ttgo-lora32:Revision=TTGO_LoRa32_V2
           - esp32:esp32:ttgo-lora32:Revision=TTGO_LoRa32_v21new
-          - esp32:esp32:heltec_wireless_stick:PSRAM=disabled
+          - esp32:esp32:heltec_wireless_stick
           - esp32:esp32:heltec_wifi_lora_32_V2
           - esp32:esp32:featheresp32
           - esp32:esp32:m5stack-core2
